# RAG

./: .gitignore  README.md  models.py  pyproject.toml  trial.ipynb
HybridSearchRAG/: graph.py  main.py  model.py  pinecone.py  prompts.py  retriever.py  trial.ipynb  vectorDB.py
InMemoryRAG/: main.py  models.py  prompts.py
InStorageRAG/: main.py  prompts.py  vector.py
KnowledgeGraph/: vectorDB.py
chroma_db/: chroma.sqlite3
